Updated through NYD bowls.  Added trajectories.

--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,80 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-01 20:17:12</em></div>
-<div class="line"><em>Last bowl scored:  ROSE BOWL (Stanford vs. Iowa)</em></div>
+<div class="line"><em>Last updated:  2016-01-01 23:49:32</em></div>
+<div class="line"><em>Last bowl scored:  SUGAR BOWL (Ole Miss vs. Oklahoma State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Beaver Believer 33.0</div>
-<div class="line">2. Jake &amp; the Neverland Pirates 31.75</div>
-<div class="line">3. <strong>Rocket Surgeon 31.25</strong></div>
-<div class="line">4. Spiker 31.0</div>
-<div class="line">5. Texsons 30.75</div>
-<div class="line">6. <strong>Eclipse 30.5</strong></div>
-<div class="line">7. Corgidawg 29.75</div>
-<div class="line">7. Santa Cruz Bill 29.75</div>
-<div class="line">7. Team Aaron 29.75</div>
-<div class="line">7. Yoda 29.75</div>
-<div class="line">11. BROCOHLI !!!!! 29.5</div>
-<div class="line">12. Cowboy 29.0</div>
-<div class="line">13. POPO 28.5</div>
-<div class="line">14. GUAC BOYZ 28.25</div>
-<div class="line">14. <strong>JessePinkman 28.25</strong></div>
-<div class="line">16. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 28.0</div>
-<div class="line">17. Devil's Tower 27.75</div>
-<div class="line">17. Yellowstone  27.75</div>
-<div class="line">19. FIELDS OF WHEAT 27.5</div>
-<div class="line">19. HAM BEAST 27.5</div>
-<div class="line">19. Texas Women 27.5</div>
-<div class="line">22. BUBBA 27.0</div>
-<div class="line">22. Frog Man 4Ever 27.0</div>
-<div class="line">22. West Coast Bias 27.0</div>
-<div class="line">25. Lucky in 2016 26.5</div>
-<div class="line">26. Julia 26.0</div>
-<div class="line">27. Perfect Spiral 25.75</div>
-<div class="line">27. Slave Darby 25.75</div>
-<div class="line">27. Tan Mei yi&nbsp; 25.75</div>
-<div class="line">30. GODIVA 25.5</div>
-<div class="line">30. Hunter 55 25.5</div>
-<div class="line">32. <strong>Captain 25.25</strong></div>
-<div class="line">32. Hou Dat 25.25</div>
-<div class="line">34. Beach Bum 25.0</div>
-<div class="line">35. Going Bowling 24.75</div>
-<div class="line">35. <strong>Surf 24.75</strong></div>
-<div class="line">37. <strong>D-bo 24.5</strong></div>
-<div class="line">38. LumberSexual 24.25</div>
-<div class="line">38. Shi boa 24.25</div>
-<div class="line">38. The Force Awakens 24.25</div>
-<div class="line">41. Blind Prognosticators 24.0</div>
-<div class="line">41. FF  24.0</div>
-<div class="line">43. Clairvoyantsmith 23.75</div>
-<div class="line">43. HALF DOME 23.75</div>
-<div class="line">43. Hui Mama 23.75</div>
-<div class="line">43. Opposite of Dad 23.75</div>
-<div class="line">47. Texas State 23.5</div>
-<div class="line">47. Trollotopia 23.5</div>
-<div class="line">49. Go Frogs 23.25</div>
-<div class="line">49. Sure Thing 23.25</div>
-<div class="line">51. KROB15 23.0</div>
-<div class="line">52. EL CAPITAN 22.75</div>
-<div class="line">53. <strong>Mama Bear 22.5</strong></div>
-<div class="line">53. Oregon Okie 22.5</div>
-<div class="line">55. Trojans 22.25</div>
-<div class="line">56. Blondy 22.0</div>
-<div class="line">56. Magnitogorsk 22.0</div>
-<div class="line">56. Spartans 22.0</div>
-<div class="line">56. TTRedRaider09 22.0</div>
-<div class="line">60. COUGAR 21.75</div>
-<div class="line">61. Billy Bad 21.5</div>
-<div class="line">62. Billy Bad 2nd 21.0</div>
-<div class="line">62. Cotton Headed Ninny Muggins 21.0</div>
-<div class="line">64. Gussysue 20.75</div>
-<div class="line">65. Bernie Trump 20.5</div>
-<div class="line">66. Aggies 20.0</div>
-<div class="line">66. Deakins 20.0</div>
-<div class="line">68. Pooh 19.0</div>
-<div class="line">69. <strong>Groodle 17.5</strong></div>
-<div class="line">70. GMen 15.75</div>
+<div class="line">1. Jake &amp; the Neverland Pirates 33.75</div>
+<div class="line">2. <strong>Eclipse 33.5</strong></div>
+<div class="line">3. <strong>Rocket Surgeon 33.25</strong></div>
+<div class="line">4. Beaver Believer 33.0</div>
+<div class="line">4. Spiker 33.0</div>
+<div class="line">6. Corgidawg 31.75</div>
+<div class="line">6. Santa Cruz Bill 31.75</div>
+<div class="line">6. Team Aaron 31.75</div>
+<div class="line">9. Cowboy 31.0</div>
+<div class="line">10. Texsons 30.75</div>
+<div class="line">11. POPO 30.5</div>
+<div class="line">12. GUAC BOYZ 30.25</div>
+<div class="line">13. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 30.0</div>
+<div class="line">14. Devil's Tower 29.75</div>
+<div class="line">14. Yellowstone  29.75</div>
+<div class="line">14. Yoda 29.75</div>
+<div class="line">17. BROCOHLI !!!!! 29.5</div>
+<div class="line">17. FIELDS OF WHEAT 29.5</div>
+<div class="line">17. HAM BEAST 29.5</div>
+<div class="line">17. Texas Women 29.5</div>
+<div class="line">21. BUBBA 29.0</div>
+<div class="line">21. West Coast Bias 29.0</div>
+<div class="line">23. GODIVA 28.5</div>
+<div class="line">23. Lucky in 2016 28.5</div>
+<div class="line">25. <strong>JessePinkman 28.25</strong></div>
+<div class="line">26. Julia 28.0</div>
+<div class="line">27. Slave Darby 27.75</div>
+<div class="line">28. Hunter 55 27.5</div>
+<div class="line">29. <strong>Captain 27.25</strong></div>
+<div class="line">30. Beach Bum 27.0</div>
+<div class="line">30. Frog Man 4Ever 27.0</div>
+<div class="line">32. <strong>D-bo 26.5</strong></div>
+<div class="line">33. Shi boa 26.25</div>
+<div class="line">33. Sure Thing 26.25</div>
+<div class="line">33. The Force Awakens 26.25</div>
+<div class="line">36. Blind Prognosticators 26.0</div>
+<div class="line">36. FF  26.0</div>
+<div class="line">38. HALF DOME 25.75</div>
+<div class="line">38. Hui Mama 25.75</div>
+<div class="line">38. Perfect Spiral 25.75</div>
+<div class="line">38. Tan Mei yi&nbsp; 25.75</div>
+<div class="line">42. <strong>Mama Bear 25.5</strong></div>
+<div class="line">42. Trollotopia 25.5</div>
+<div class="line">44. Go Frogs 25.25</div>
+<div class="line">44. Hou Dat 25.25</div>
+<div class="line">44. Trojans 25.25</div>
+<div class="line">47. KROB15 25.0</div>
+<div class="line">47. Magnitogorsk 25.0</div>
+<div class="line">47. Spartans 25.0</div>
+<div class="line">50. EL CAPITAN 24.75</div>
+<div class="line">50. Going Bowling 24.75</div>
+<div class="line">50. <strong>Surf 24.75</strong></div>
+<div class="line">53. LumberSexual 24.25</div>
+<div class="line">54. Blondy 24.0</div>
+<div class="line">55. Clairvoyantsmith 23.75</div>
+<div class="line">55. COUGAR 23.75</div>
+<div class="line">55. Opposite of Dad 23.75</div>
+<div class="line">58. Texas State 23.5</div>
+<div class="line">59. Aggies 23.0</div>
+<div class="line">60. Gussysue 22.75</div>
+<div class="line">61. Bernie Trump 22.5</div>
+<div class="line">61. Oregon Okie 22.5</div>
+<div class="line">63. TTRedRaider09 22.0</div>
+<div class="line">64. Billy Bad 21.5</div>
+<div class="line">65. Billy Bad 2nd 21.0</div>
+<div class="line">65. Cotton Headed Ninny Muggins 21.0</div>
+<div class="line">67. <strong>Groodle 20.5</strong></div>
+<div class="line">68. Deakins 20.0</div>
+<div class="line">69. Pooh 19.0</div>
+<div class="line">70. GMen 18.75</div>
 </div>
 </div>
 </body>
