--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -2702,6 +2702,82 @@ ul.auto-toc {
 <td>0.0</td>
 <td>3.0</td>
 </tr>
+<tr><td>30</td>
+<td>SUGAR BOWL</td>
+<td>Ole Miss</td>
+<td>Oklahoma State</td>
+<td>7.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>3.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Deshaun Watson &gt; total yards than Baker Mayfield</td>
 <td>&nbsp;</td>
@@ -3011,75 +3087,75 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>20.0</strong></td>
-<td><strong>25.0</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>33.0</strong></td>
-<td><strong>20.5</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>21.5</strong></td>
 <td><strong>21.0</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>24.0</strong></td>
-<td><strong>22.0</strong></td>
+<td><strong>29.5</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>21.0</strong></td>
+<td><strong>23.75</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>29.75</strong></td>
+<td><strong>33.5</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>26.0</strong></td>
 <td><strong>29.5</strong></td>
 <td><strong>27.0</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>25.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>21.75</strong></td>
-<td><strong>29.0</strong></td>
-<td><strong>24.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>30.5</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>15.75</strong></td>
-<td><strong>23.25</strong></td>
-<td><strong>25.5</strong></td>
+<td><strong>28.5</strong></td>
 <td><strong>24.75</strong></td>
-<td><strong>17.5</strong></td>
-<td><strong>28.25</strong></td>
-<td><strong>20.75</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>27.5</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>30.25</strong></td>
+<td><strong>22.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>29.5</strong></td>
 <td><strong>25.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>31.75</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>33.75</strong></td>
 <td><strong>28.25</strong></td>
-<td><strong>26.0</strong></td>
-<td><strong>23.0</strong></td>
-<td><strong>26.5</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>28.5</strong></td>
 <td><strong>24.25</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>22.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>23.75</strong></td>
 <td><strong>22.5</strong></td>
 <td><strong>25.75</strong></td>
 <td><strong>19.0</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>31.25</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>22.0</strong></td>
-<td><strong>31.0</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>23.25</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>33.25</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>33.0</strong></td>
+<td><strong>30.0</strong></td>
+<td><strong>26.25</strong></td>
 <td><strong>24.75</strong></td>
 <td><strong>25.75</strong></td>
-<td><strong>29.75</strong></td>
+<td><strong>31.75</strong></td>
 <td><strong>23.5</strong></td>
-<td><strong>27.5</strong></td>
+<td><strong>29.5</strong></td>
 <td><strong>30.75</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>23.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>25.25</strong></td>
+<td><strong>25.5</strong></td>
 <td><strong>22.0</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>27.75</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>29.75</strong></td>
 <td><strong>29.75</strong></td>
 </tr>
 </tbody>
