Updated results through Alamo Bowl.

--- a/bowl_pool/2015-2016/rankings.html
+++ b/bowl_pool/2015-2016/rankings.html
@@ -342,80 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-01 23:57:15</em></div>
-<div class="line"><em>Last bowl scored:  SUGAR BOWL (Ole Miss vs. Oklahoma State)</em></div>
+<div class="line"><em>Last updated:  2016-01-02 22:15:45</em></div>
+<div class="line"><em>Last bowl scored:  ALAMO BOWL (Oregon vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Jake &amp; the Neverland Pirates 33.75</div>
-<div class="line">2. <strong>Eclipse 33.5</strong></div>
-<div class="line">3. <strong>Rocket Surgeon 33.25</strong></div>
-<div class="line">4. Beaver Believer 33.0</div>
-<div class="line">4. Spiker 33.0</div>
-<div class="line">6. Corgidawg 31.75</div>
-<div class="line">6. Santa Cruz Bill 31.75</div>
-<div class="line">6. Team Aaron 31.75</div>
-<div class="line">9. Cowboy 31.0</div>
-<div class="line">10. Texsons 30.75</div>
-<div class="line">11. POPO 30.5</div>
-<div class="line">12. GUAC BOYZ 30.25</div>
-<div class="line">13. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 30.0</div>
-<div class="line">14. Devil's Tower 29.75</div>
-<div class="line">14. Yellowstone  29.75</div>
-<div class="line">14. Yoda 29.75</div>
-<div class="line">17. BROCOHLI !!!!! 29.5</div>
-<div class="line">17. FIELDS OF WHEAT 29.5</div>
-<div class="line">17. HAM BEAST 29.5</div>
-<div class="line">17. Texas Women 29.5</div>
-<div class="line">21. BUBBA 29.0</div>
-<div class="line">21. West Coast Bias 29.0</div>
-<div class="line">23. GODIVA 28.5</div>
-<div class="line">23. Lucky in 2016 28.5</div>
-<div class="line">25. <strong>JessePinkman 28.25</strong></div>
-<div class="line">26. Julia 28.0</div>
-<div class="line">27. Slave Darby 27.75</div>
-<div class="line">28. Hunter 55 27.5</div>
-<div class="line">29. <strong>Captain 27.25</strong></div>
-<div class="line">30. Beach Bum 27.0</div>
-<div class="line">30. Frog Man 4Ever 27.0</div>
-<div class="line">32. <strong>D-bo 26.5</strong></div>
-<div class="line">33. Shi boa 26.25</div>
-<div class="line">33. Sure Thing 26.25</div>
-<div class="line">33. The Force Awakens 26.25</div>
-<div class="line">36. Blind Prognosticators 26.0</div>
-<div class="line">36. FF  26.0</div>
-<div class="line">38. HALF DOME 25.75</div>
-<div class="line">38. Hui Mama 25.75</div>
-<div class="line">38. Perfect Spiral 25.75</div>
-<div class="line">38. Tan Mei yi&nbsp; 25.75</div>
-<div class="line">42. <strong>Mama Bear 25.5</strong></div>
-<div class="line">42. Trollotopia 25.5</div>
-<div class="line">44. Go Frogs 25.25</div>
-<div class="line">44. Hou Dat 25.25</div>
-<div class="line">44. Trojans 25.25</div>
-<div class="line">47. KROB15 25.0</div>
-<div class="line">47. Magnitogorsk 25.0</div>
-<div class="line">47. Spartans 25.0</div>
-<div class="line">50. EL CAPITAN 24.75</div>
-<div class="line">50. Going Bowling 24.75</div>
-<div class="line">50. <strong>Surf 24.75</strong></div>
-<div class="line">53. LumberSexual 24.25</div>
-<div class="line">54. Blondy 24.0</div>
-<div class="line">55. Clairvoyantsmith 23.75</div>
-<div class="line">55. COUGAR 23.75</div>
-<div class="line">55. Opposite of Dad 23.75</div>
-<div class="line">58. Texas State 23.5</div>
-<div class="line">59. Aggies 23.0</div>
-<div class="line">60. Gussysue 22.75</div>
-<div class="line">61. Bernie Trump 22.5</div>
-<div class="line">61. Oregon Okie 22.5</div>
-<div class="line">63. TTRedRaider09 22.0</div>
-<div class="line">64. Billy Bad 21.5</div>
-<div class="line">65. Billy Bad 2nd 21.0</div>
-<div class="line">65. Cotton Headed Ninny Muggins 21.0</div>
-<div class="line">67. <strong>Groodle 20.5</strong></div>
-<div class="line">68. Deakins 20.0</div>
-<div class="line">69. Pooh 19.0</div>
-<div class="line">70. GMen 18.75</div>
+<div class="line">1. <strong>Eclipse 36.5</strong></div>
+<div class="line">2. Jake &amp; the Neverland Pirates 35.75</div>
+<div class="line">3. <strong>Rocket Surgeon 35.25</strong></div>
+<div class="line">4. Beaver Believer 35.0</div>
+<div class="line">4. Spiker 35.0</div>
+<div class="line">6. Team Aaron 34.75</div>
+<div class="line">7. POPO 34.5</div>
+<div class="line">8. Corgidawg 33.75</div>
+<div class="line">8. Santa Cruz Bill 33.75</div>
+<div class="line">10. FIELDS OF WHEAT 33.5</div>
+<div class="line">11. GUAC BOYZ 33.25</div>
+<div class="line">12. Cowboy 33.0</div>
+<div class="line">13. Texsons 32.75</div>
+<div class="line">14. <strong>JessePinkman 32.25</strong></div>
+<div class="line">15. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 32.0</div>
+<div class="line">15. West Coast Bias 32.0</div>
+<div class="line">17. Devil's Tower 31.75</div>
+<div class="line">17. Yellowstone  31.75</div>
+<div class="line">17. Yoda 31.75</div>
+<div class="line">20. HAM BEAST 31.5</div>
+<div class="line">20. Lucky in 2016 31.5</div>
+<div class="line">20. Texas Women 31.5</div>
+<div class="line">23. BUBBA 31.0</div>
+<div class="line">24. Slave Darby 30.75</div>
+<div class="line">25. BROCOHLI !!!!! 30.5</div>
+<div class="line">25. <strong>D-bo 30.5</strong></div>
+<div class="line">25. GODIVA 30.5</div>
+<div class="line">25. Hunter 55 30.5</div>
+<div class="line">29. Julia 30.0</div>
+<div class="line">30. Go Frogs 29.25</div>
+<div class="line">30. Sure Thing 29.25</div>
+<div class="line">32. Beach Bum 29.0</div>
+<div class="line">32. Blind Prognosticators 29.0</div>
+<div class="line">32. Frog Man 4Ever 29.0</div>
+<div class="line">32. Magnitogorsk 29.0</div>
+<div class="line">36. <strong>Captain 28.25</strong></div>
+<div class="line">36. Shi boa 28.25</div>
+<div class="line">36. The Force Awakens 28.25</div>
+<div class="line">39. Spartans 28.0</div>
+<div class="line">40. COUGAR 27.75</div>
+<div class="line">40. HALF DOME 27.75</div>
+<div class="line">40. Hui Mama 27.75</div>
+<div class="line">40. Tan Mei yi&nbsp; 27.75</div>
+<div class="line">44. <strong>Mama Bear 27.5</strong></div>
+<div class="line">44. Trollotopia 27.5</div>
+<div class="line">46. Trojans 27.25</div>
+<div class="line">47. FF  27.0</div>
+<div class="line">47. KROB15 27.0</div>
+<div class="line">49. Clairvoyantsmith 26.75</div>
+<div class="line">49. EL CAPITAN 26.75</div>
+<div class="line">49. Going Bowling 26.75</div>
+<div class="line">49. Perfect Spiral 26.75</div>
+<div class="line">49. <strong>Surf 26.75</strong></div>
+<div class="line">54. Oregon Okie 26.5</div>
+<div class="line">54. Texas State 26.5</div>
+<div class="line">56. Hou Dat 26.25</div>
+<div class="line">56. LumberSexual 26.25</div>
+<div class="line">58. Aggies 26.0</div>
+<div class="line">58. Blondy 26.0</div>
+<div class="line">60. Gussysue 25.75</div>
+<div class="line">61. TTRedRaider09 25.0</div>
+<div class="line">62. Opposite of Dad 24.75</div>
+<div class="line">63. Bernie Trump 24.5</div>
+<div class="line">63. Billy Bad 24.5</div>
+<div class="line">65. Billy Bad 2nd 24.0</div>
+<div class="line">66. Cotton Headed Ninny Muggins 22.0</div>
+<div class="line">67. GMen 21.75</div>
+<div class="line">68. Deakins 21.0</div>
+<div class="line">69. <strong>Groodle 20.5</strong></div>
+<div class="line">70. Pooh 19.0</div>
 </div>
 </div>
 </body>
