--- a/bowl_pool/test/2015-2016/rankings.html
+++ b/bowl_pool/test/2015-2016/rankings.html
@@ -342,80 +342,80 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2016-01-01 17:00:00</em></div>
-<div class="line"><em>Last bowl scored:  COTTON BOWL (Alabama vs. Michigan State)</em></div>
+<div class="line"><em>Last updated:  2016-01-02 22:13:33</em></div>
+<div class="line"><em>Last bowl scored:  ALAMO BOWL (Oregon vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. BROCOHLI !!!!! 25.5</div>
-<div class="line">2. <strong>Eclipse 23.5</strong></div>
-<div class="line">3. GUAC BOYZ 23.25</div>
-<div class="line">4. Beaver Believer 23.0</div>
-<div class="line">4. Spiker 23.0</div>
-<div class="line">6. Jake &amp; the Neverland Pirates 22.75</div>
-<div class="line">7. HAM BEAST 22.5</div>
-<div class="line">8. <strong>Rocket Surgeon 22.25</strong></div>
-<div class="line">9. Santa Cruz Bill 21.75</div>
-<div class="line">9. Team Aaron 21.75</div>
-<div class="line">11. FIELDS OF WHEAT 21.5</div>
-<div class="line">11. POPO 21.5</div>
-<div class="line">13. Hou Dat 21.25</div>
-<div class="line">13. <strong>JessePinkman 21.25</strong></div>
-<div class="line">15. KROB15 21.0</div>
-<div class="line">16. Corgidawg 20.75</div>
-<div class="line">16. Texsons 20.75</div>
-<div class="line">16. Yellowstone  20.75</div>
-<div class="line">16. Yoda 20.75</div>
-<div class="line">20. GODIVA 20.5</div>
-<div class="line">21. Go Frogs 20.25</div>
-<div class="line">22. Cowboy 20.0</div>
-<div class="line">22. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 20.0</div>
-<div class="line">22. TTRedRaider09 20.0</div>
-<div class="line">25. Devil's Tower 19.75</div>
-<div class="line">25. Opposite of Dad 19.75</div>
-<div class="line">25. Perfect Spiral 19.75</div>
-<div class="line">28. Hunter 55 19.5</div>
-<div class="line">28. Lucky in 2016 19.5</div>
-<div class="line">30. <strong>Captain 19.25</strong></div>
-<div class="line">31. Beach Bum 19.0</div>
-<div class="line">31. Julia 19.0</div>
-<div class="line">31. West Coast Bias 19.0</div>
-<div class="line">34. Clairvoyantsmith 18.75</div>
-<div class="line">34. Going Bowling 18.75</div>
-<div class="line">36. Texas State 18.5</div>
-<div class="line">36. Texas Women 18.5</div>
-<div class="line">38. Blind Prognosticators 18.0</div>
-<div class="line">38. FF  18.0</div>
-<div class="line">38. Frog Man 4Ever 18.0</div>
-<div class="line">41. HALF DOME 17.75</div>
-<div class="line">41. Slave Darby 17.75</div>
-<div class="line">41. <strong>Surf 17.75</strong></div>
-<div class="line">41. Tan Mei yi&nbsp; 17.75</div>
-<div class="line">45. <strong>D-bo 17.5</strong></div>
-<div class="line">46. LumberSexual 17.25</div>
-<div class="line">46. Sure Thing 17.25</div>
-<div class="line">46. The Force Awakens 17.25</div>
-<div class="line">49. BUBBA 17.0</div>
-<div class="line">49. Cotton Headed Ninny Muggins 17.0</div>
-<div class="line">49. Pooh 17.0</div>
-<div class="line">52. EL CAPITAN 16.75</div>
-<div class="line">53. Billy Bad 16.5</div>
-<div class="line">53. <strong>Mama Bear 16.5</strong></div>
-<div class="line">55. Blondy 16.0</div>
-<div class="line">55. Magnitogorsk 16.0</div>
-<div class="line">55. Spartans 16.0</div>
-<div class="line">58. COUGAR 15.75</div>
-<div class="line">59. Oregon Okie 15.5</div>
-<div class="line">59. Trollotopia 15.5</div>
-<div class="line">61. Shi boa 15.25</div>
-<div class="line">61. Trojans 15.25</div>
-<div class="line">63. Billy Bad 2nd 15.0</div>
-<div class="line">64. Gussysue 14.75</div>
-<div class="line">64. Hui Mama 14.75</div>
-<div class="line">66. <strong>Groodle 14.5</strong></div>
-<div class="line">67. Bernie Trump 13.5</div>
-<div class="line">68. Aggies 11.0</div>
-<div class="line">68. Deakins 11.0</div>
-<div class="line">70. GMen 10.75</div>
+<div class="line">1. <strong>Eclipse 36.5</strong></div>
+<div class="line">2. Jake &amp; the Neverland Pirates 35.75</div>
+<div class="line">3. <strong>Rocket Surgeon 35.25</strong></div>
+<div class="line">4. Beaver Believer 35.0</div>
+<div class="line">4. Spiker 35.0</div>
+<div class="line">6. Team Aaron 34.75</div>
+<div class="line">7. POPO 34.5</div>
+<div class="line">8. Corgidawg 33.75</div>
+<div class="line">8. Santa Cruz Bill 33.75</div>
+<div class="line">10. FIELDS OF WHEAT 33.5</div>
+<div class="line">11. GUAC BOYZ 33.25</div>
+<div class="line">12. Cowboy 33.0</div>
+<div class="line">13. Texsons 32.75</div>
+<div class="line">14. <strong>JessePinkman 32.25</strong></div>
+<div class="line">15. &quot;Steve Harvey's &quot;&quot;Columbia&quot;&quot;&quot; 32.0</div>
+<div class="line">15. West Coast Bias 32.0</div>
+<div class="line">17. Devil's Tower 31.75</div>
+<div class="line">17. Yellowstone  31.75</div>
+<div class="line">17. Yoda 31.75</div>
+<div class="line">20. HAM BEAST 31.5</div>
+<div class="line">20. Lucky in 2016 31.5</div>
+<div class="line">20. Texas Women 31.5</div>
+<div class="line">23. BUBBA 31.0</div>
+<div class="line">24. Slave Darby 30.75</div>
+<div class="line">25. BROCOHLI !!!!! 30.5</div>
+<div class="line">25. <strong>D-bo 30.5</strong></div>
+<div class="line">25. GODIVA 30.5</div>
+<div class="line">25. Hunter 55 30.5</div>
+<div class="line">29. Julia 30.0</div>
+<div class="line">30. Go Frogs 29.25</div>
+<div class="line">30. Sure Thing 29.25</div>
+<div class="line">32. Beach Bum 29.0</div>
+<div class="line">32. Blind Prognosticators 29.0</div>
+<div class="line">32. Frog Man 4Ever 29.0</div>
+<div class="line">32. Magnitogorsk 29.0</div>
+<div class="line">36. <strong>Captain 28.25</strong></div>
+<div class="line">36. Shi boa 28.25</div>
+<div class="line">36. The Force Awakens 28.25</div>
+<div class="line">39. Spartans 28.0</div>
+<div class="line">40. COUGAR 27.75</div>
+<div class="line">40. HALF DOME 27.75</div>
+<div class="line">40. Hui Mama 27.75</div>
+<div class="line">40. Tan Mei yi&nbsp; 27.75</div>
+<div class="line">44. <strong>Mama Bear 27.5</strong></div>
+<div class="line">44. Trollotopia 27.5</div>
+<div class="line">46. Trojans 27.25</div>
+<div class="line">47. FF  27.0</div>
+<div class="line">47. KROB15 27.0</div>
+<div class="line">49. Clairvoyantsmith 26.75</div>
+<div class="line">49. EL CAPITAN 26.75</div>
+<div class="line">49. Going Bowling 26.75</div>
+<div class="line">49. Perfect Spiral 26.75</div>
+<div class="line">49. <strong>Surf 26.75</strong></div>
+<div class="line">54. Oregon Okie 26.5</div>
+<div class="line">54. Texas State 26.5</div>
+<div class="line">56. Hou Dat 26.25</div>
+<div class="line">56. LumberSexual 26.25</div>
+<div class="line">58. Aggies 26.0</div>
+<div class="line">58. Blondy 26.0</div>
+<div class="line">60. Gussysue 25.75</div>
+<div class="line">61. TTRedRaider09 25.0</div>
+<div class="line">62. Opposite of Dad 24.75</div>
+<div class="line">63. Bernie Trump 24.5</div>
+<div class="line">63. Billy Bad 24.5</div>
+<div class="line">65. Billy Bad 2nd 24.0</div>
+<div class="line">66. Cotton Headed Ninny Muggins 22.0</div>
+<div class="line">67. GMen 21.75</div>
+<div class="line">68. Deakins 21.0</div>
+<div class="line">69. <strong>Groodle 20.5</strong></div>
+<div class="line">70. Pooh 19.0</div>
 </div>
 </div>
 </body>
