--- a/bowl_pool/2015-2016/results.html
+++ b/bowl_pool/2015-2016/results.html
@@ -2778,6 +2778,234 @@ ul.auto-toc {
 <td>2.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>31</td>
+<td>TAXSLAYER.COM GATOR</td>
+<td>Georgia</td>
+<td>Penn State</td>
+<td>6.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+</tr>
+<tr><td>32</td>
+<td>LIBERTY BOWL</td>
+<td>Arkansas</td>
+<td>Kansas State</td>
+<td>13.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>33</td>
+<td>ALAMO BOWL</td>
+<td>Oregon</td>
+<td>TCU</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>B2</td>
 <td>Deshaun Watson &gt; total yards than Baker Mayfield</td>
 <td>&nbsp;</td>
@@ -3087,76 +3315,76 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>23.0</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>33.0</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>21.0</strong></td>
 <td><strong>26.0</strong></td>
-<td><strong>24.0</strong></td>
-<td><strong>29.5</strong></td>
 <td><strong>29.0</strong></td>
-<td><strong>27.25</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>31.75</strong></td>
-<td><strong>21.0</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>31.0</strong></td>
-<td><strong>26.5</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>33.5</strong></td>
-<td><strong>24.75</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>24.0</strong></td>
+<td><strong>29.0</strong></td>
 <td><strong>26.0</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>20.5</strong></td>
-<td><strong>30.25</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>27.5</strong></td>
-<td><strong>33.75</strong></td>
-<td><strong>28.25</strong></td>
-<td><strong>28.0</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>24.25</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>23.75</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>19.0</strong></td>
 <td><strong>30.5</strong></td>
-<td><strong>33.25</strong></td>
+<td><strong>31.0</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>22.0</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>33.0</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>21.0</strong></td>
 <td><strong>31.75</strong></td>
+<td><strong>36.5</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>33.5</strong></td>
+<td><strong>29.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>33.25</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>31.5</strong></td>
 <td><strong>26.25</strong></td>
 <td><strong>27.75</strong></td>
-<td><strong>25.0</strong></td>
-<td><strong>33.0</strong></td>
+<td><strong>30.5</strong></td>
+<td><strong>35.75</strong></td>
+<td><strong>32.25</strong></td>
 <td><strong>30.0</strong></td>
+<td><strong>27.0</strong></td>
+<td><strong>31.5</strong></td>
 <td><strong>26.25</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>25.75</strong></td>
-<td><strong>31.75</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>29.5</strong></td>
-<td><strong>30.75</strong></td>
-<td><strong>26.25</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>25.5</strong></td>
-<td><strong>22.0</strong></td>
 <td><strong>29.0</strong></td>
-<td><strong>29.75</strong></td>
-<td><strong>29.75</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>24.75</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>34.5</strong></td>
+<td><strong>35.25</strong></td>
+<td><strong>33.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>30.75</strong></td>
+<td><strong>28.0</strong></td>
+<td><strong>35.0</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>29.25</strong></td>
+<td><strong>26.75</strong></td>
+<td><strong>27.75</strong></td>
+<td><strong>34.75</strong></td>
+<td><strong>26.5</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>32.75</strong></td>
+<td><strong>28.25</strong></td>
+<td><strong>27.25</strong></td>
+<td><strong>27.5</strong></td>
+<td><strong>25.0</strong></td>
+<td><strong>32.0</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>31.75</strong></td>
 </tr>
 </tbody>
 </table>
